# Atlas

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  evaluation.md  phase-4b-design.md  production-models-report.md
eval/: run_eval.py
eval/datasets/: answer_generation_dataset.jsonl  citation_dataset.jsonl  confidence_dataset.jsonl  decomposition_dataset.jsonl  failure_dataset.jsonl  golden_demo.jsonl  retrieval_dataset.jsonl  rewrite_dataset.jsonl  routing_dataset.jsonl
eval/fixtures/: catalog.py  corpus.py  generate_datasets.py
eval/metrics/: __init__.py  answer.py  citation.py  confidence.py  decomposition.py  failure.py  latency.py  report.py  rerank.py  retrieval.py  rewrite.py  routing.py
eval/reports/: .gitkeep  after-fix.json  after-fix.md  baseline-v1.json  baseline-v1.md  improvement-log.md  latest.json  latest.md  production-benchmark.json  production-benchmark.md
prompts/: answer_generation.txt  system.txt
scripts/: run_production_benchmark.py  write_production_report.py
src/adaptive_rag/: __init__.py  main.py
src/adaptive_rag/api/: __init__.py  app.py  exception_handlers.py
src/adaptive_rag/api/dependencies/: __init__.py  container.py
src/adaptive_rag/api/routes/: health.py  (+3 more)
src/adaptive_rag/application/: __init__.py
src/adaptive_rag/config/: __init__.py  mappers.py  settings.py
src/adaptive_rag/domain/: __init__.py  errors.py
src/adaptive_rag/infrastructure/: __init__.py  factories.py
src/adaptive_rag/observability/: __init__.py  logging.py
tests/: conftest.py  test_adaptive_retrieval.py  test_answer_generator.py  test_citation_formatter.py  test_context_builder.py  test_decomposition.py  test_eval.py  test_fake_adapters_default.py  test_ingestion.py  test_ingestion_metadata.py  test_integration_embedder.py  test_integration_pipeline.py  test_openrouter_llm.py  test_production_settings.py  test_prompt_builder.py  test_reranker.py  test_retrieval.py  test_routing.py  test_security_hardening.py  test_smoke.py
(+90 files in other folders)
