[project]
name = "adaptive-rag"
version = "0.1.0"
description = "Production-quality Adaptive Hybrid RAG Platform with LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.8.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "langchain-core>=1.4.9",
    "langgraph>=1.2.9",
    "numpy<2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "sentence-transformers==3.4.1",
    "torch==2.2.2",
    "transformers==4.46.3",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
adaptive-rag = "adaptive_rag.main:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "datasets>=2.14.4",
    "langchain-openai>=1.3.5",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ragas>=0.0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
markers = [
    "integration: integration tests that load real AI models (embedder, reranker, OpenRouter)",
]

[tool.uv]
package = true
